# turnstay_webhook_sdk

./: .pre-commit-config.yaml  AGENTS.md  README.md  development.txt  pyproject.toml  run_sdk.py
.cursor/rules/: sdk-client-pattern.mdc  sdk-client-utils.mdc  sdk-schemas.mdc  sdk-structure.mdc  sdk-testing.mdc
.github/: dependabot.yml
.github/actions/publish-pypi/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/actions/static-analysis/: action.yml
.github/workflows/: ci-cd.yml
tests/: test_client.py  test_event.py  test_signature.py
turnstay_webhooks/: __init__.py  client.py  errors.py  event.py  signature.py
