[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turnstay_webhooks"
description = "TurnStay Webhooks SDK – emit events, verify signatures, and consume webhook payloads"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["turnstay", "webhooks", "sdk", "payments"]
authors = [
  { name = "Alon Stern", email = "alon@turnstay.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx>=0.25.0",
]
dynamic = ["version"]

[project.optional-dependencies]
sqs = ["boto3>=1.28.0"]

[project.urls]
Documentation = "https://github.com/RubertoPaulo/turnstay_webhook_sdk#readme"
Issues = "https://github.com/RubertoPaulo/turnstay_webhook_sdk/issues"
Source = "https://github.com/RubertoPaulo/turnstay_webhook_sdk"

[tool.hatch.version]
path = "turnstay_webhooks/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "httpx",
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-recording",
]
[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=turnstay_webhooks --cov=tests"
run = "run-coverage --no-cov"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=turnstay_webhooks --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "turnstay_webhooks/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["turnstay_webhooks"]
