[tool.poetry]
name = "turnstay_webhooks"
version = "0.1.0"
description = "TurnStay Webhooks SDK – emit events, verify signatures, and consume webhook payloads"
authors = ["Alon Stern <alon@turnstay.com>"]
readme = "README.md"
packages = [{include = "turnstay_webhooks"}]
license = "MIT"
keywords = ["turnstay", "webhooks", "sdk", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.25.0"

[tool.poetry.extras]
sqs = ["boto3"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
coverage = "^7.0"
ruff = "^0.11.0"
bandit = "^1.8.0"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "turnstay_webhooks/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["tests"]
